--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/marked": "^1.2.2",
     "apollo-server-micro": "^2.21.0",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "marked": "^2.0.0",
     "next": "11.1",
     "react": "17.0.1",
@@ -20,10 +21,19 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.2",
     "@types/sqlite3": "^3.1.7",
     "@types/styled-components": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.1.5"
   }
 }
